<?xml version="1.0"?>
<package format="2">
  <name>auv_common_descriptions</name>
  <version>0.1.0</version>
  <description>Contains common xacro description files used for building robots in URDF or Xacro.</description>
  <maintainer email="senceryazici@gmail.com">Sencer Yazici</maintainer>
  <author email="senceryazici@gmail.com">Sencer Yazici</author>
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <export/>
</package>
