<?xml version="1.0"?>
<package format="2">
  <name>auv_description</name>
  <version>0.1.0</version>
  <description>The meta-package containing all the description files for the auv robots.</description>
  <maintainer email="senceryazici@gmail.com">Sencer Yazici</maintainer>
  <author email="senceryazici@gmail.com">Sencer Yazici</author>
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>auv_common_descriptions</exec_depend>
  <exec_depend>taluy_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>
  <export>

  </export>
</package>
